# VisionSDK

./: README.md  build_all.sh  run_presmoke.sh
mxBase/: .gitignore  CMakeLists.txt  LICENSE.md  RELEASE.md
mxBase/mindx/: __init__.py
mxBase/mindx/sdk/: __init__.py
mxBase/mindx/sdk/base/: __init__.py
mxBase/src/: CMakeLists.txt
mxBase/src/mxbase/: CMakeLists.txt
mxBase/src/mxbase/module/: CMakeLists.txt
mxBase/src/operators/: CMakeLists.txt
mxBase/src/operators/TikCaption/: CMakeLists.txt  blend_img_caption.py
mxBase/src/operators/TikInplace/: CMakeLists.txt  tensor_inplace.py
mxBase/src/operators/backgroundreplace/: CMakeLists.txt  background_replace.py
mxBase/src/operators/operatorascendc/: CMakeLists.txt  build_op_ascendc.sh  vector_scheduler.h
mxBase/src/operators/operatorsdsl/: CMakeLists.txt  build_op_dsl.sh  test.json
mxBase/src/operators/warpaffine/: CMakeLists.txt  warp_affine.py
mxBase/src/operators/warpperspective/: CMakeLists.txt  warp_perspective.py
mxBase/src/postprocess/: CMakeLists.txt
mxBase/src/postprocess/module/: CMakeLists.txt
mxBase/src/python/: CMakeLists.txt  build_python.sh
mxBase/src/python/SwigInterface/: Base.i  Dvpp.i  Log.i  Post.i
mxBase/src/python/patches/: base.patch  dvpp.patch  log.patch  post.patch
mxBase/test/: CMakeLists.txt
mxBase/test/gtest/: CMakeLists.txt  README.md
mxBase/test/gtest/CV/: CMakeLists.txt
mxBase/test/gtest/Common/: CMakeLists.txt  VersionTest.cpp  version.info
mxBase/test/gtest/ConfigUtil/: CMakeLists.txt  ConfigUtilTest.cpp  facedemoReg.config  invalid.config
mxBase/test/gtest/DeviceManager/: CMakeLists.txt  TestDevice.cpp
mxBase/test/gtest/DvppConfig/: CMakeLists.txt
mxBase/test/gtest/DvppEncode/: CMakeLists.txt  DvppEncodeTest.cpp
mxBase/test/gtest/DvppWrapper/: CMakeLists.txt  DvppWrapperTest.cpp
mxBase/test/gtest/E2eInfer/: CMakeLists.txt
mxBase/test/gtest/ErrorCode/: CMakeLists.txt  ErrorCodeTest.cpp
mxBase/test/gtest/FastMathTest/: CMakeLists.txt  FastMathTest.cpp
mxBase/test/gtest/Log/: CMakeLists.txt  LogTest.cpp
mxBase/test/gtest/Maths/: CMakeLists.txt  NpySortTest.cpp
mxBase/test/gtest/MemoryHelper/: CMakeLists.txt  MemoryHelperTest.cpp
mxBase/test/gtest/ModelInfer/: CMakeLists.txt  ModelInferTest.cpp  ModelInferTestV2.cpp  MxMindIRModelDescTest.cpp  MxModelDescTest.cpp  MxOmModelDescTest.cpp
mxBase/test/gtest/Module/: CMakeLists.txt
mxBase/test/gtest/NmsTest/: CMakeLists.txt  NmsTest.cpp
mxBase/test/gtest/PostProcess/: CMakeLists.txt  test_postprocess.py
mxBase/test/gtest/PostProcessUT/: CMakeLists.txt
mxBase/test/gtest/PyAPITest/: CMakeLists.txt  test_dvpp.py  test_image.py  test_image_processor.py  test_log.py  test_matrices_core_operations_on_tensors.py  test_model.py  test_per_element_operations.py  test_pyapi.py  test_tensor.py  vision_pytest.py
mxBase/test/gtest/Tensor/: CMakeLists.txt
mxBase/test/gtest/Util/: CMakeLists.txt
mxPlugins/: CMakeLists.txt  README.md
mxPlugins/src/module/: CMakeLists.txt
mxPlugins/src/module/ModelPostProcessors/: CMakeLists.txt
mxPlugins/src/module/MxpiBufferStablizer/: CMakeLists.txt  MxpiBufferStablizer.cpp
mxPlugins/src/module/MxpiChannelImagesStitcher/: CMakeLists.txt  MxpiChannelImagesStitcher.cpp
mxPlugins/src/module/MxpiChannelOsdCoordsConverter/: CMakeLists.txt  MxpiChannelOsdCoordsConverter.cpp
mxPlugins/src/module/MxpiChannelSelector/: CMakeLists.txt  MxpiChannelSelector.cpp
mxPlugins/src/module/MxpiClass2OsdInstances/: CMakeLists.txt  MxpiClass2OsdInstances.cpp
mxPlugins/src/module/MxpiDataSerialize/: CMakeLists.txt  MxpiDataSerialize.cpp
mxPlugins/src/module/MxpiDataTransfer/: CMakeLists.txt  MxpiDataTransfer.cpp
mxPlugins/src/module/MxpiDistributor/: CMakeLists.txt  MxpiDistributor.cpp
mxPlugins/src/module/MxpiDumpData/: CMakeLists.txt  MxpiDumpData.cpp
mxPlugins/src/module/MxpiFaceAlignment/: CMakeLists.txt  MxpiFaceAlignment.cpp
mxPlugins/src/module/MxpiImageCrop/: CMakeLists.txt  MxpiImageCrop.cpp
mxPlugins/src/module/MxpiImageDecoder/: CMakeLists.txt  MxpiImageDecoder.cpp
mxPlugins/src/module/MxpiImageEncoder/: CMakeLists.txt  MxpiImageEncoder.cpp
mxPlugins/src/module/MxpiImageNormalize/: CMakeLists.txt  MxpiImageNormalize.cpp
mxPlugins/src/module/MxpiImageResize/: CMakeLists.txt  MxpiImageResize.cpp
mxPlugins/src/module/MxpiLoadData/: CMakeLists.txt  MxpiLoadData.cpp
mxPlugins/src/module/MxpiModelInfer/: CMakeLists.txt  MxpiModelInfer.cpp
mxPlugins/src/module/MxpiModelPostProcessors/: CMakeLists.txt
mxPlugins/src/module/MxpiMotSimpleSort/: CMakeLists.txt  MxpiMotSimpleSortBase.cpp
mxPlugins/src/module/MxpiNmsOverlapedRoi/: CMakeLists.txt  MxpiNmsOverlapedRoiBase.cpp
mxPlugins/src/module/MxpiObject2OsdInstances/: CMakeLists.txt  MxpiObject2OsdInstances.cpp
mxPlugins/src/module/MxpiObjectSelector/: CMakeLists.txt  MxpiObjectSelector.cpp
mxPlugins/src/module/MxpiOpencvCenterCrop/: CMakeLists.txt  MxpiOpencvCenterCrop.cpp
mxPlugins/src/module/MxpiOpencvOsd/: CMakeLists.txt  MxpiOpencvOsd.cpp  format_codes.sh
mxPlugins/src/module/MxpiOsdInstanceMerger/: CMakeLists.txt  MxpiOsdInstanceMerger.cpp
mxPlugins/src/module/MxpiParallel2Serial/: CMakeLists.txt  MxpiParallel2Serial.cpp
mxStream/: CMakeLists.txt
mxStream/samples/: CMakeLists.txt
mxStream/samples/C++/: CMakeLists.txt  main.cpp  run.sh
mxStream/samples/config/: streamserver.conf
mxStream/samples/python/: main.py  run.sh
mxStream/samples/streamserver/: run.sh
mxStream/src/: CMakeLists.txt
mxStream/src/module/: CMakeLists.txt
mxStream/src/python/: CMakeLists.txt  build_python.sh  stream_python.patch
mxStream/test/: CMakeLists.txt
mxStream/test/python/: CMakeLists.txt  test.pipline  test.py  test_MxpiClassList.py  test_MxpiTensorPackageList.py  test_MxpiVisionList.py  test_StreamManagerApi.py  test_stream.py
mxTools/: .gitignore  CMakeLists.txt
mxTools/src/: CMakeLists.txt
mxTools/src/include/: CMakeLists.txt
mxTools/src/module/: CMakeLists.txt
mxTools/test/: CMakeLists.txt
mxTools/test/gtest/: CMakeLists.txt  README.md
(+1560 files in other folders)
