cmake_minimum_required(VERSION 3.14.1)

set(mxmanufacture ${PROJECT_SOURCE_DIR}/samples/mxManufacture)
set(mxvision ${PROJECT_SOURCE_DIR}/samples/mxVision)
set(C++ ${PROJECT_SOURCE_DIR}/samples/C++)
set(python ${PROJECT_SOURCE_DIR}/samples/python)
set(pipeline ${PROJECT_SOURCE_DIR}/samples/pipeline)
set(models ${PROJECT_SOURCE_DIR}/samples/models)
set(config ${PROJECT_SOURCE_DIR}/samples/config)
set(streamserver ${PROJECT_SOURCE_DIR}/samples/streamserver)

install(DIRECTORY ${mxmanufacture} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples)
install(DIRECTORY ${mxvision} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples)
install(DIRECTORY ${models} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxManufacture)
install(DIRECTORY ${models} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxVision)
install(DIRECTORY ${pipeline} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxManufacture)
install(DIRECTORY ${pipeline} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxVision)
install(DIRECTORY ${C++} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxManufacture)
install(DIRECTORY ${C++} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxVision)
install(DIRECTORY ${python} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxManufacture)
install(DIRECTORY ${python} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxVision)
install(DIRECTORY ${config} DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY ${config} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxManufacture/mxStreammanager)
install(DIRECTORY ${streamserver} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxManufacture)
install(DIRECTORY ${streamserver} DESTINATION ${CMAKE_INSTALL_PREFIX}/samples/mxVision)