if(COVERAGE)
set(MXPLUGINS_COMMON_DEP_LIBS plugintoolkit gstbase-1.0 mxbase mxpidatatype crypto gcov)
else()
set(MXPLUGINS_COMMON_DEP_LIBS plugintoolkit gstbase-1.0 mxbase mxpidatatype crypto)
endif()
set(MXPI_UTILS_FILE ${CMAKE_CURRENT_SOURCE_DIR}/MxpiPluginsUtils/MxpiPluginsUtils.cpp)
add_subdirectory(MxpiImageDecoder)
add_subdirectory(MxpiImageResize)
add_subdirectory(MxpiModelInfer)
add_subdirectory(MxpiImageCrop)
add_subdirectory(MxpiOpencvCenterCrop)
add_subdirectory(MxpiDataSerialize)
add_subdirectory(MxpiRtspVideoInfo)
add_subdirectory(MxpiRtspSrc)
add_subdirectory(MxpiVideoDecoder)
add_subdirectory(MxpiMotSimpleSort)
add_subdirectory(MxpiDistributor)
add_subdirectory(MxpiNmsOverlapedRoi)
add_subdirectory(MxpiDumpData)
add_subdirectory(MxpiLoadData)
add_subdirectory(MxpiFaceAlignment)
add_subdirectory(MxpiParallel2Serial)
add_subdirectory(MxpiSkipFrame)
add_subdirectory(MxpiSynchronize)
add_subdirectory(MxpiDataTransfer)
add_subdirectory(MxpiVideoEncoder)
add_subdirectory(MxpiImageEncoder)
add_subdirectory(MxpiTensorInfer)
add_subdirectory(MxpiModelPostProcessors)
add_subdirectory(MxpiWarpPerspective)
add_subdirectory(MxpiQualityDetection)
add_subdirectory(MxpiImageNormalize)
add_subdirectory(MxpiChannelSelector)
add_subdirectory(MxpiObject2OsdInstances)
add_subdirectory(MxpiChannelOsdCoordsConverter)
add_subdirectory(MxpiChannelImagesStitcher)
add_subdirectory(MxpiOpencvOsd)
add_subdirectory(MxpiRotation)
add_subdirectory(MxpiBufferStablizer)
add_subdirectory(MxpiClass2OsdInstances)
add_subdirectory(MxpiOsdInstanceMerger)
add_subdirectory(ModelPostProcessors)
add_subdirectory(MxpiSemanticSegStitcher)
add_subdirectory(MxpiPluginsUtils)
add_subdirectory(MxpiRoiGenerator)
add_subdirectory(MxpiObjectSelector)

